fix #45 コマンドのオプションが被っていたので修正

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Web開発者向けのOJT",
   "scripts": {
     "lint": "textlint",
-    "lint": "textlint --fix"
+    "lint:fix": "textlint --fix"
   },
   "repository": {
     "type": "git",
