modify #51 校正を全てのファイルに適応出来るようにコマンド内容を変更

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Web開発者向けのOJT",
   "scripts": {
     "lint": "textlint",
-    "lint:fix": "textlint --fix"
+    "lint:fix": "textlint --fix",
+    "lint:all": "textlint 'docs/**/*.md' 'README.md'",
+    "lint:all:fix": "textlint --fix 'docs/**/*.md' 'README.md'"
   },
   "repository": {
     "type": "git",
