fix #62 "private"に渡している true が何故か文字列型になっていたので修正

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-developer-ojt",
   "version": "1.0.0",
-  "private": "true",
+  "private": true,
   "description": "Web開発者向けのOJT",
   "scripts": {
     "lint": "textlint",
